--- a/event-page-one.html
+++ b/event-page-one.html
@@ -64,7 +64,7 @@
               </div>
         </div>
         <div class="eventos-grid">
-            <a href="./event-page-one.html">
+            <a href="./conocernos.html">
                 <div class="event">
                     <div class="event-pics" id="event-one">
                     </div> 
