--- a/pawtucket.html
+++ b/pawtucket.html
@@ -48,25 +48,19 @@
                 <p2>Pawtucket</p2>
             </div>
           </div>
-        <div class="hero-area" id="hero-area-conocernos">
-          <div class="bottom2">
-            <div class="donar-pic">
-              <div class="donar-text">
-                <h1>Conocernos</h1>
+
+          <div class="pawtucket-hero">
+            <div class="pawtucket-text">
+                <h1>          
+                    Monte Sinai
+    
+                </h1>
                 <p1>
-                  EDIT THIS Para más información sobre diezmos y donaciones,
-                  seguridad y privacidad, impuestos, etc., póngase en contacto
-                  con nosotros
+                    Sede Central
                 </p1>
-                <div class="buttoncontainertwo" id="donar-button">
-                  <button type="button2" class="button2">DAR AHORA</button>
-                </div>
               </div>
-              <div class="donar-gradient">
-                <img src="./img/gradient.png" />
-              </div>
+              <div class="pawtucket-gradient">
             </div>
-            <img class="pastor" id="donar-hero" src="./img/pastora.jpg" />
           </div>
         </div>
         <div class="conocernos-options" id="church-location-identifier">
@@ -74,104 +68,63 @@
             <p2>155 Power Rd, Pawtucket, RI, 02860 ></p2>
           </div>
         </div>
-        <!-- make img area responsive -->
-        <div class="last-section" id="hero-area-conocernos">
-          <div class="anni" id="anni-conocernos">
-            <img src="./img/javier.jpg" />
-          </div>
-          <div class="last-section-text" id="last-section-text-conocernos">
-            <h1>Nuestro Mision</h1>
-            <p1>
-              El Movimiento Pentecostal Monte Sinaí existe para este propósito;
-              continuar extendiendo el reino de Dios en la tierra. Es por este
-              sentido de responsabilidad que Dios ha puesto una visión en
-              nosotros global, de alcanzar las naciones para Cristo.​
-            </p1>
-          </div>
-        </div>
-        <div class="video-section" id="video-section-concernos">
-          <div class="video-text" id="video-text-concernos">
-            <h1>Un Mensaje del Presidente</h1>
-            <p2>“¿Por qué nació el Movimiento Pentecostal Monte Sinaí?"</p2>
-            <div class="buttoncontainertwo" id="donar-button">
-              <button type="button2" class="button2">LEER MAS</button>
+        <div class="gridoptions" id="church-gridoptions">
+            <div class="tabs" id="church-tabs">
+              <div class="right-tab-1-church" id="church-tab-1">
+                <div class="church-text-tab">
+                    <h1>Eres Nuevo?</h1>
+                    <p1>Meet the pastors and learn more about this location.
+                    </p1>
+                </div>
+              </div>
+              <div class="right-tab-1-church" id="church-tab-2">
+                <div class="church-text-tab">
+                    <h1>Eres Nuevo?</h1>
+                    <p1>Meet the pastors and learn more about this location.
+                    </p1>
+                </div>
+              </div>
+              <div class="left-tab-1" id="left-tab-church">
+                    <h2>Horarios de Servicio</h2>
+                    <p2><em>Servicio Evangelistico</em></p2>
+                    <p1>Domingos</p1>
+                    <h4>3:00 PM</h4>
+                    <hr>
+                    <p2><em>Servicio Evangelistico</em></p2>
+                    <p1>Domingos</p1>
+                    <h4>3:00 PM</h4>
+                    <hr>
+                    <p2><em>Servicio Evangelistico</em></p2>
+                    <p1>Domingos</p1>
+                    <h4>3:00 PM</h4>
+              </div>
+              <div class="right-tab-1-church" id="church-tab-3">
+                <div class="church-text-tab">
+                    <h1>Eres Nuevo?</h1>
+                    <p1>Meet the pastors and learn more about this location.
+                    </p1>
+                </div>
+              </div>
+              <div class="right-tab-1-church" id="church-tab-4">
+                <div class="church-text-tab">
+                    <h1>Eres Nuevo?</h1>
+                    <p1>Meet the pastors and learn more about this location.
+                    </p1>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="video">
-            <div class="bItem"></div>
-            <video
-              class="first-video"
-              id="conocernos-first-video"
-              preload="auto"
-              autoplay
-              loop
-              muted="muted"
-              volume="0"
-            >
-              <source
-                src="./img/trim transition church video.mp4"
-                type="video/mp4"
-              />
-            </video>
-          </div>
         </div>
-        <div class="last-section">
-          <div class="anni">
-            <img src="./img/50Anni.F4.png" />
+        <div class="last-section" id="church-about">
+          <div class="anni" id="church-about-pic">
           </div>
+          <div class="last-section-text" id="church-about-text">
+            <h1>Nosotros
+            </h1>
+            <p1>
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, itaque perferendis. Vitae numquam ad error praesentium ab amet illo nam repellat consectetur, animi, natus expedita optio, repellendus aliquam quo! Exercitationem.
+            </p1>
 
-          <div class="last-section-text">
-            <h1>Celebrando 50 Años</h1>
-            <p1>
-              Learn more about the history of this movement and more! Lorem
-              ipsum dolor sit amet consectetur adipisicing elit. Adipisci minus,
-            </p1>
-            <div class="buttoncontainertwo" id="donar-button">
-              <button type="button2" class="button2">HISTORIA</button>
-            </div>
-          </div>
-        </div>
-        <div class="creencias-fundamentales">
-          <div class="creencias-hero">
-            <div class="creencias-text">
-              <h1>Creencias Fundamentales</h1>
-            </div>
-          </div>
-          <div class="creencias-info">
-            <div class="biblia">
-              <img src="./img/icon-bible.png" />
-              <h3>La Biblia</h3>
-              <p2
-                >Creemos que la Biblia es la palabra de Dios; la regla infalible
-                en la que basar nuestra fe y conducta. Creemos que fue inspirada
-                divinamente por Dios como se afirma en 2 Timoteo 3:15 y 2 Pedro
-                2:2.
-              </p2>
-            </div>
-            <div class="Dios">
-              <img src="./img/icon-sun.png" />
-              <h3>Dios</h3>
-              <p2
-                >Estamos afirmando que creemos en el único y verdadero Dios,
-                creador de los cielos, los cielos y la tierra, y de todo lo que
-                existe en el mundo visible e invisible, que además conserva todo
-                lo creado: JEHOVÁ.
-              </p2>
-            </div>
-            <div class="Jesucristo">
-              <img src="./img/icon-cross.png" />
-              <h3>Jesucristo</h3>
-              <p2
-                >Creemos en Jesucristo como centro de nuestra fe cristiana, el
-                hijo unigénito del padre lleno de gracia y verdad. Murió en la
-                cruz a causa de nuestras transgresiones y pecados, y resucitó al
-                tercer día para nuestra justificación y nuestra esperanza de
-                resurrección.
-              </p2>
-            </div>
-          </div>
-          <div class="creencias-fundamentales-button">
-            <button class="button2">Leer Mas</button>
           </div>
         </div>
         <div class="lideres">
@@ -207,48 +160,6 @@
           </div>
           <div class="creencias-fundamentales-button">
             <button class="button2">Leer Mas</button>
-          </div>
-        </div>
-        <div class="iglesias">
-          <div class="creencias-hero" id="conocernos-iglesias">
-            <div class="creencias-text" id="cre">
-              <h1>Iglesias</h1>
-              <p1
-                >Ver el trabajo misionero del Movimiento Pentecostal Monte
-                Sinai</p1
-              >
-            </div>
-          </div>
-          <div class="gridoptions">
-            <div class="tabs" id="conocernos-tabs">
-              <div class="left-tab-1" >
-                <div class="left-tab-2-content">
-                  <h3>Missionary Work</h3>
-                  <p1>
-                    Check out the current missionary work around the globe
-                    <br>
-                    <br>
-                  </p1>
-                  <button type="button" class="button" id="button-tab">
-                    Ver AHORA
-                  </button>
-                </div>
-              </div>
-              <div class="right-tab-2">
-                <div class="right-tab-2-left">
-                  <div class="right-tab-2-left-content">
-                    <h1>Find a Church</h1>
-                    <h3>
-                      Looking for a location near you? Try our geolocator to find one
-                    </h3>
-                    <div class="buttoncontainertwo">
-                      <button type="button2" class="button2"> <img src="./img/arrow.svg" />
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
         <footer>
