--- a/unete.html
+++ b/unete.html
@@ -7,6 +7,8 @@
     <title>Movimiento Pentecostal Monte Sinai</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <link rel="stylesheet" href="https://use.typekit.net/twz8ktl.css">
+
   <body>
     <style>
       h1 {
@@ -48,10 +50,8 @@
         </div>
       </header>
       <main>
-        <div class="hero-area" id="donar">
-          <div class="bottom2">
-            <div class="donar-pic" >
-              <div class="donar-text">
+        <div class="hero-area" id="unete">
+              <div class="donar-text" id="unete-hero">
                 <h1>!Unete a Nosotros!
                 </h1>
                 <p1
@@ -64,11 +64,7 @@
                 <!-- TODO:make gradient more visible/aesthetic-->
               </div>
               <div class="donar-gradient" id="gradient-unete">
-                <img src="./img/gradient.png" />
               </div>
-            </div>
-            <img class="pastor" id="unete-hero" src="./img/little-girl.jpg" />
-          </div>
         </div>
         <div class="gridoptions">
           <div class="tabs" id="unete-tabs">
