--- a/donar.html
+++ b/donar.html
@@ -7,6 +7,8 @@
     <title>Movimiento Pentecostal Monte Sinai</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <link rel="stylesheet" href="https://use.typekit.net/twz8ktl.css">
+
   <body>
     <script
       src="https://kit.fontawesome.com/2fe0501eef.js"
